1999-07-01  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (INSTALL-addauth-ops, INSTALL-setauth-ops,
	INSTALL-su-ops): Removed.  These programs don't have to be
	installed suid-root anymore. 
	* frobauth-mod.c (frobauth_modify): Do not try to set the owner of
	the processes we're frobbing.  The process set their owner
	themselves when we pass them their new authentication.

1999-06-21  Roland McGrath  <roland@baalperazim.frob.com>

	* login.c (main): For no-uids shell, default SH_ARG0 to informative
	value.  Use asprintf to construct it.

1999-06-20  Roland McGrath  <roland@baalperazim.frob.com>

	* ps.c (options): Doc fix.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* w.c (fetch_boot_time): New function.  Use libps to get
	task_basic_info for PID 1 (init); its creation_time is "boot time".
	(uptime): Use it, instead of stat'ing /var/run/uptime.

	* ps.c (output_fmts): Add %start and %time specs before %command
	in "user" (ps -u) format.

1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.c (parse_task): Fail with appropriate error message if the
	fetched task is MACH_PORT_NULL.

1999-04-25  Roland McGrath  <roland@baalperazim.frob.com>

	* shd.c (run): Print child's PID when pausing before exec.

Fri Mar 12 15:22:02 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* login.c (add_utmp_entry): Properly call setutent and endutent
	around the getutline call.

1999-03-11  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.c (main): Grok -E and inhibit error msg for
	print_xlated_port_info if set.
	(options): #if 0 -q option until we implement it.

1999-02-17  Roland McGrath  <roland@baalperazim.frob.com>

	* mount.sh: Use `awk' instead of `gawk'.

Fri Feb 19 02:43:11 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* login.c (main): Correctly implement -f instead of always
	acting as if it were set.

	* login.c (main): When transitioning from no UID's to having UID's
	create a new session like normal.  Reported by Mark M. Kettenis